@@ -11,6 +11,7 @@ Installation: pip install astviewer
 Example use:
 
 ::
+
     %> pyastviewer myprog.py
 
 For more examples see: https://github.com/titusjan/astviewer
